<?xml version="1.0" encoding="UTF-8"?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<!-- =========================================   MAIN   ============================================ -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.kenai.redminenb</groupId>
	<artifactId>redminenb</artifactId>
	<version>2.0.4.2</version>
	<packaging>nbm</packaging>
	<name>RedmineNB</name>
	<repositories>
		<repository>
			<id>netbeans</id>
			<name>NetBeans</name>
			<url>http://bits.netbeans.org/maven2/</url>
		</repository>
	</repositories>
	<scm>
		<connection>scm:git:https://github.com/redminenb/redminenb.git</connection>
		<developerConnection>scm:git:git@github.com:redminenb/redminenb.git</developerConnection>
		<url>https://github.com/redminenb/redminenb</url>
	</scm>
	<!-- =========================================   PROPERTIES  ======================================= -->
	<properties>
		<brandingToken>redminenb</brandingToken>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<netbeans.run.params>-J-Dnetbeans.full.hack=true</netbeans.run.params>
		<!-- dependen versions -->
		<commons-lang3.version>3.17.0</commons-lang3.version>
		<eclipselink-moxy.version>3.0.0</eclipselink-moxy.version>
		<findbugs.version>3.0.0</findbugs.version>
		<json.version>20250517</json.version>
		<jsoup.version>1.21.1</jsoup.version>
		<mylyn-wikitext.version>3.0.46.202301111837</mylyn-wikitext.version>
		<netbeans.version>RELEASE260</netbeans.version>
		<redmine-java-api.version>4.0.0.rc4</redmine-java-api.version>
		<slf4j.version>2.0.17</slf4j.version>
		<swingx-core.version>1.6.5-1</swingx-core.version>
		<xml-api.version>4.0.2</xml-api.version>
	</properties>
	<!-- =========================================   DEPENDENCIES  ===================================== -->
	<dependencies>
		<!-- Netbeans -->
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-api-annotations-common</artifactId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-netbeans-modules-bugtracking</artifactId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-netbeans-modules-options-api</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-netbeans-api-progress</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-netbeans-api-progress-nb</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-openide-awt</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-openide-dialogs</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-openide-filesystems</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-openide-loaders</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-openide-nodes</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-openide-modules</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-openide-util</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-openide-util-ui</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<artifactId>org-openide-util-lookup</artifactId>
			<groupId>org.netbeans.api</groupId>
			<version>${netbeans.version}</version>
		</dependency>
		<dependency>
			<groupId>org.netbeans.api</groupId>
			<artifactId>org-openide-windows</artifactId>
			<version>${netbeans.version}</version>
		</dependency>
		<!-- Redmine Java API -->
		<dependency>
			<groupId>com.taskadapter</groupId>
			<artifactId>redmine-java-api</artifactId>
			<version>${redmine-java-api.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.json</groupId>
					<artifactId>json</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- XML API and implementation -->
		<dependency>
			<groupId>jakarta.xml.ws</groupId>
			<artifactId>jakarta.xml.ws-api</artifactId>
			<version>${xml-api.version}</version>
		</dependency>
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>${xml-api.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>org.eclipse.persistence.moxy</artifactId>
			<version>${eclipselink-moxy.version}</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun.mail</groupId>
					<artifactId>jakarta.mail</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Commons lang 3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<!-- Swingx -->
		<dependency>
			<groupId>org.swinglabs.swingx</groupId>
			<artifactId>swingx-core</artifactId>
			<version>${swingx-core.version}</version>
		</dependency>
		<!-- JSoup -->
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>${jsoup.version}</version>
		</dependency>
		<!-- JSON -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${json.version}</version>
		</dependency>
		<!-- SLF4J -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<!-- Findbugs -->
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>annotations</artifactId>
			<version>${findbugs.version}</version>
			<scope>provided</scope>
		</dependency>
		<!-- Mylyn Wikitext -->
		<dependency>
			<groupId>org.eclipse.mylyn.docs</groupId>
			<artifactId>org.eclipse.mylyn.wikitext</artifactId>
			<version>${mylyn-wikitext.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.mylyn.docs</groupId>
			<artifactId>org.eclipse.mylyn.wikitext.textile</artifactId>
			<version>${mylyn-wikitext.version}</version>
		</dependency>
	</dependencies>
	<!-- =========================================   BUILD  ============================================ -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.4.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.1.4</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.1.4</version>
			</plugin>

			<plugin>
				<groupId>org.apache.netbeans.utilities</groupId>
				<artifactId>nbm-maven-plugin</artifactId>
				<version>4.2</version>
				<extensions>true</extensions>
				<configuration>
					<author>Anchialas, Tom Kunicki, Eric Barboni, Matthias Bläsing, Timo Schmidt</author>
					<brandingToken>${brandingToken}</brandingToken>
					<cluster>${brandingToken}</cluster>
					<useOSGiDependencies>false</useOSGiDependencies>
					<licenseName>Apache License 2.0</licenseName>
					<licenseFile>apache-license20.txt</licenseFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>-proc:full</arg>
						<arg>-Xlint</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.alexecollins.maven.plugin</groupId>
				<artifactId>script-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<phase>process-classes</phase>
						<goals>
							<goal>execute</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<language>javascript</language>
					<script>
						<!-- Add dependencies of OSGI bundles to module by directly modifying the MANIFEST.MF file -->
                        <![CDATA[
                        var dependencies = [
                            "org.apache.commons.logging > 1.3.5",
                        ], filename = project.getBasedir() + "/target/classes/META-INF/MANIFEST.MF",
                        manifest = new java.util.jar.Manifest(new java.io.FileInputStream(filename)),
                        attributes = manifest.getMainAttributes(), entry = "OpenIDE-Module-Module-Dependencies", value = attributes.getValue(entry);
						value = !value ? "" : value.trim() + "";
                        for(var i=0; i<dependencies.length; i++){if(value != ""){value += ", ";} value += dependencies[i]; } attributes.putValue(entry, value);
                        manifest.write(new java.io.FileOutputStream(filename));
                        ]]>
					</script>
					<passProjectAsProperty>true</passProjectAsProperty>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>rhino</groupId>
						<artifactId>js</artifactId>
						<version>1.7R2</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
